k8s-aks/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: platform-api
  labels:
    app.kubernetes.io/part-of: enterprise-hybrid-cloud-sre-platform
    environment: production
